:sparkles: se descuenta stock despues de una compra

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -37,7 +37,7 @@
                     Crea y gestiona ordenes.
                 </p>
                 <div class="flex justify-center">
-                    <button (click)="nav.goToInicio()"
+                    <button (click)="nav.goToOrder()"
                         class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition">
                         Gestionar Ordeness
                     </button>
